--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="ingresarBtn">Ingresar</string>
+    <string name="e_mail">E-mail</string>
+    <string name="constrase_a">Constraseña</string>
+    <string name="detalle">Detalle</string>
+    <string name="volver">volver</string>
+    <string name="favortio">Favortio</string>
+    <string name="favorito" />
+    <string name="favorito2">favorito</string>
 </resources>
